tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__bitfld_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/bitfld-1.c" (c, x86_64-unknown-linux-gnu)
fn abort() -> void [external, c, nothrow];
fn main(%arg0: s32i, %arg1: s8i**) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: s32i, %arg1: s8i**):
        %0 = alloca s32i, "argc", align 4
        %1 = alloca s8i**, "argv", align 8
        %2 = alloca s32i, "__retval", align 4
        %3 = alloca rec_x, "bit", align 4
        %4 = alloca u32i, "u", align 4
        %5 = alloca s32i, "i", align 4
        %6 = alloca u32i, "unsigned_result", align 4
        %7 = alloca s32i, "signed_result", align 4
        store %arg0, %0
        store %arg1, %1
        %8 = const 0 : s32i
        store %8, %2
        %9 = const 4294967283 : u32i
        %10 = const 61 : u32i
        %11 = rem %9, %10 : u32i
        store %11, %6, align 4
        %12 = const -13 : s32i
        %13 = const 61 : s32i
        %14 = rem %12, %13 : s32i
        store %14, %7, align 4
        %15 = const 61 : u32i
        %16 = get_member %3[0] "u" : u16i*
        <unmodeled: cir.set_bitfield>
        %18 = const 61 : u32i
        store %18, %4, align 4
        %19 = const -13 : s32i
        %20 = get_member %3[0] "i" : u16i*
        <unmodeled: cir.set_bitfield>
        %22 = const -13 : s32i
        store %22, %5, align 4
        scope {
            %66 = load %5 : s32i, align 4
            %67 = cast(integral) %66 : u32i
            %68 = load %4 : u32i, align 4
            %69 = rem %67, %68 : u32i
            %70 = load %6 : u32i, align 4
            %71 = cmp ne %69, %70 : bool
            if %71 {
                %72 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %59 = load %5 : s32i, align 4
            %60 = cast(integral) %59 : u32i
            %61 = load %4 : u32i, align 4
            %62 = rem %60, %61 : u32i
            %63 = load %6 : u32i, align 4
            %64 = cmp ne %62, %63 : bool
            if %64 {
                %65 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %51 = load %5 : s32i, align 4
            %52 = get_member %3[0] "u" : u16i*
            <unmodeled: cir.get_bitfield>
            %54 = cast(integral) %53 : s32i
            %55 = rem %51, %54 : s32i
            %56 = load %7 : s32i, align 4
            %57 = cmp ne %55, %56 : bool
            if %57 {
                %58 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %42 = get_member %3[0] "i" : u16i*
            <unmodeled: cir.get_bitfield>
            %44 = get_member %3[0] "u" : u16i*
            <unmodeled: cir.get_bitfield>
            %46 = cast(integral) %45 : s32i
            %47 = rem %43, %46 : s32i
            %48 = load %7 : s32i, align 4
            %49 = cmp ne %47, %48 : bool
            if %49 {
                %50 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %34 = load %5 : s32i, align 4
            %35 = cast(integral) %34 : u32i
            %36 = get_member %3[0] "u" : u16i*
            <unmodeled: cir.get_bitfield>
            %38 = rem %35, %37 : u32i
            %39 = load %6 : u32i, align 4
            %40 = cmp ne %38, %39 : bool
            if %40 {
                %41 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        scope {
            %25 = get_member %3[0] "i" : u16i*
            <unmodeled: cir.get_bitfield>
            %27 = cast(integral) %26 : u32i
            %28 = get_member %3[0] "u" : u16i*
            <unmodeled: cir.get_bitfield>
            %30 = rem %27, %29 : u32i
            %31 = load %6 : u32i, align 4
            %32 = cmp ne %30, %31 : bool
            if %32 {
                %33 = get_global @abort : (() -> void)*
                call @abort() [all]
                yield
            }
            yield
        }
        %23 = const 0 : s32i
        store %23, %2
        %24 = load %2 : s32i
        return %24
}
