tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__bitfld_10.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/bitfld-10.c" (c, x86_64-unknown-linux-gnu)
fn g(%arg0: rec_f*, %arg1: s32i) -> s32i [external, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: rec_f*, %arg1: s32i):
        %9 = alloca rec_f*, "a", align 8
        %10 = alloca s32i, "t", align 4
        %11 = alloca s32i, "__retval", align 4
        %12 = alloca s32i, "t1", align 4
        store %arg0, %9
        store %arg1, %10
        scope {
            %22 = load %10 : s32i, align 4
            %23 = cast(int_to_bool) %22 : bool
            if %23 {
                %28 = const -1 : s32i
                %29 = load %9 : rec_f*, align 8
                %30 = get_member %29[0] "t" : u8i*
                <unmodeled: cir.set_bitfield>
                yield
            } else {
                %24 = const 0 : s32i
                %25 = load %9 : rec_f*, align 8
                %26 = get_member %25[0] "t" : u8i*
                <unmodeled: cir.set_bitfield>
                yield
            }
            yield
        }
        %13 = load %9 : rec_f*, align 8
        %14 = get_member %13[0] "t" : u8i*
        <unmodeled: cir.get_bitfield>
        store %15, %12, align 4
        scope {
            %18 = load %12 : s32i, align 4
            %19 = cast(int_to_bool) %18 : bool
            if %19 {
                %20 = const 1 : s32i
                store %20, %11
                %21 = load %11 : s32i
                return %21
            }
            yield
        }
        %16 = load %12 : s32i, align 4
        store %16, %11
        %17 = load %11 : s32i
        return %17
}
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = alloca rec_f, "a", align 4
    %2 = const 0 : s32i
    store %2, %0
    scope {
        %5 = const 1 : s32i
        %6 = call @g(%1, %5) : s32i [all]
        %7 = cast(int_to_bool) %6 : bool
        %8 = not %7 : bool
        if %8 {
            call @abort() [all]
            yield
        }
        yield
    }
    %3 = const 0 : s32i
    store %3, %0
    %4 = load %0 : s32i
    return %4
}
