tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__bitfld_8.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/bitfld-8.c" (c, x86_64-unknown-linux-gnu)
global button : rec_mouse_button_str = zero [external, default, align 1, dso_local]

fn fct(%arg0: u8i) -> s8i [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: u8i):
        %131 = alloca u8i, "coerce", align 1
        store %arg0, %131
        %132 = cast(bitcast) %131 : rec_mouse_button_str*
        %133 = load %132 : rec_mouse_button_str
        %134 = alloca rec_mouse_button_str, "newbutton", align 1
        %135 = alloca s8i, "__retval", align 1
        %136 = alloca s8i, "l", align 1
        %137 = alloca s8i, "r", align 1
        %138 = alloca s8i, "m", align 1
        store %133, %134
        %139 = get_member %134[0] "left" : u8i*
        <unmodeled: cir.get_bitfield>
        %141 = cast(integral) %140 : s8i
        store %141, %136, align 1
        %142 = get_member %134[0] "right" : u8i*
        <unmodeled: cir.get_bitfield>
        %144 = cast(integral) %143 : s8i
        store %144, %137, align 1
        %145 = get_member %134[0] "middle" : u8i*
        <unmodeled: cir.get_bitfield>
        %147 = cast(integral) %146 : s8i
        store %147, %138, align 1
        %148 = load %136 : s8i, align 1
        %149 = cast(integral) %148 : s32i
        %150 = cast(int_to_bool) %149 : bool
        %151 = ternary %150 ? { : bool
            %163 = const #true : bool
            yield %163
        } : {
            %160 = load %137 : s8i, align 1
            %161 = cast(integral) %160 : s32i
            %162 = cast(int_to_bool) %161 : bool
            yield %162
        }
        %152 = ternary %151 ? { : bool
            %159 = const #true : bool
            yield %159
        } : {
            %156 = load %138 : s8i, align 1
            %157 = cast(integral) %156 : s32i
            %158 = cast(int_to_bool) %157 : bool
            yield %158
        }
        %153 = cast(bool_to_int) %152 : s32i
        %154 = cast(integral) %153 : s8i
        store %154, %135
        %155 = load %135 : s8i
        return %155
}
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca rec_mouse_button_str, "coerce", align 1
    %1 = alloca rec_mouse_button_str, "coerce", align 1
    %2 = alloca rec_mouse_button_str, "coerce", align 1
    %3 = alloca rec_mouse_button_str, "coerce", align 1
    %4 = alloca rec_mouse_button_str, "coerce", align 1
    %5 = alloca rec_mouse_button_str, "coerce", align 1
    %6 = alloca rec_mouse_button_str, "coerce", align 1
    %7 = alloca rec_mouse_button_str, "coerce", align 1
    %8 = alloca s32i, "__retval", align 4
    %9 = alloca rec_mouse_button_str, "newbutton1", align 1
    %10 = const 0 : s32i
    store %10, %8
    %11 = const 1 : u8i
    %12 = get_member %9[0] "left" : u8i*
    <unmodeled: cir.set_bitfield>
    %14 = const 1 : u8i
    %15 = get_member %9[0] "middle" : u8i*
    <unmodeled: cir.set_bitfield>
    %17 = const 1 : u8i
    %18 = get_member %9[0] "right" : u8i*
    <unmodeled: cir.set_bitfield>
    scope {
        %125 = load %9 : rec_mouse_button_str, align 1
        store %125, %7
        %126 = cast(bitcast) %7 : u8i*
        %127 = load %126 : u8i
        %128 = call @fct(%127) : s8i [all]
        %129 = cast(int_to_bool) %128 : bool
        %130 = not %129 : bool
        if %130 {
            call @abort() [all]
            yield
        }
        yield
    }
    %20 = const 0 : u8i
    %21 = get_member %9[0] "left" : u8i*
    <unmodeled: cir.set_bitfield>
    %23 = const 1 : u8i
    %24 = get_member %9[0] "middle" : u8i*
    <unmodeled: cir.set_bitfield>
    %26 = const 1 : u8i
    %27 = get_member %9[0] "right" : u8i*
    <unmodeled: cir.set_bitfield>
    scope {
        %119 = load %9 : rec_mouse_button_str, align 1
        store %119, %6
        %120 = cast(bitcast) %6 : u8i*
        %121 = load %120 : u8i
        %122 = call @fct(%121) : s8i [all]
        %123 = cast(int_to_bool) %122 : bool
        %124 = not %123 : bool
        if %124 {
            call @abort() [all]
            yield
        }
        yield
    }
    %29 = const 1 : u8i
    %30 = get_member %9[0] "left" : u8i*
    <unmodeled: cir.set_bitfield>
    %32 = const 0 : u8i
    %33 = get_member %9[0] "middle" : u8i*
    <unmodeled: cir.set_bitfield>
    %35 = const 1 : u8i
    %36 = get_member %9[0] "right" : u8i*
    <unmodeled: cir.set_bitfield>
    scope {
        %113 = load %9 : rec_mouse_button_str, align 1
        store %113, %5
        %114 = cast(bitcast) %5 : u8i*
        %115 = load %114 : u8i
        %116 = call @fct(%115) : s8i [all]
        %117 = cast(int_to_bool) %116 : bool
        %118 = not %117 : bool
        if %118 {
            call @abort() [all]
            yield
        }
        yield
    }
    %38 = const 1 : u8i
    %39 = get_member %9[0] "left" : u8i*
    <unmodeled: cir.set_bitfield>
    %41 = const 1 : u8i
    %42 = get_member %9[0] "middle" : u8i*
    <unmodeled: cir.set_bitfield>
    %44 = const 0 : u8i
    %45 = get_member %9[0] "right" : u8i*
    <unmodeled: cir.set_bitfield>
    scope {
        %107 = load %9 : rec_mouse_button_str, align 1
        store %107, %4
        %108 = cast(bitcast) %4 : u8i*
        %109 = load %108 : u8i
        %110 = call @fct(%109) : s8i [all]
        %111 = cast(int_to_bool) %110 : bool
        %112 = not %111 : bool
        if %112 {
            call @abort() [all]
            yield
        }
        yield
    }
    %47 = const 1 : u8i
    %48 = get_member %9[0] "left" : u8i*
    <unmodeled: cir.set_bitfield>
    %50 = const 0 : u8i
    %51 = get_member %9[0] "middle" : u8i*
    <unmodeled: cir.set_bitfield>
    %53 = const 0 : u8i
    %54 = get_member %9[0] "right" : u8i*
    <unmodeled: cir.set_bitfield>
    scope {
        %101 = load %9 : rec_mouse_button_str, align 1
        store %101, %3
        %102 = cast(bitcast) %3 : u8i*
        %103 = load %102 : u8i
        %104 = call @fct(%103) : s8i [all]
        %105 = cast(int_to_bool) %104 : bool
        %106 = not %105 : bool
        if %106 {
            call @abort() [all]
            yield
        }
        yield
    }
    %56 = const 0 : u8i
    %57 = get_member %9[0] "left" : u8i*
    <unmodeled: cir.set_bitfield>
    %59 = const 1 : u8i
    %60 = get_member %9[0] "middle" : u8i*
    <unmodeled: cir.set_bitfield>
    %62 = const 0 : u8i
    %63 = get_member %9[0] "right" : u8i*
    <unmodeled: cir.set_bitfield>
    scope {
        %95 = load %9 : rec_mouse_button_str, align 1
        store %95, %2
        %96 = cast(bitcast) %2 : u8i*
        %97 = load %96 : u8i
        %98 = call @fct(%97) : s8i [all]
        %99 = cast(int_to_bool) %98 : bool
        %100 = not %99 : bool
        if %100 {
            call @abort() [all]
            yield
        }
        yield
    }
    %65 = const 0 : u8i
    %66 = get_member %9[0] "left" : u8i*
    <unmodeled: cir.set_bitfield>
    %68 = const 0 : u8i
    %69 = get_member %9[0] "middle" : u8i*
    <unmodeled: cir.set_bitfield>
    %71 = const 1 : u8i
    %72 = get_member %9[0] "right" : u8i*
    <unmodeled: cir.set_bitfield>
    scope {
        %89 = load %9 : rec_mouse_button_str, align 1
        store %89, %1
        %90 = cast(bitcast) %1 : u8i*
        %91 = load %90 : u8i
        %92 = call @fct(%91) : s8i [all]
        %93 = cast(int_to_bool) %92 : bool
        %94 = not %93 : bool
        if %94 {
            call @abort() [all]
            yield
        }
        yield
    }
    %74 = const 0 : u8i
    %75 = get_member %9[0] "left" : u8i*
    <unmodeled: cir.set_bitfield>
    %77 = const 0 : u8i
    %78 = get_member %9[0] "middle" : u8i*
    <unmodeled: cir.set_bitfield>
    %80 = const 0 : u8i
    %81 = get_member %9[0] "right" : u8i*
    <unmodeled: cir.set_bitfield>
    scope {
        %84 = load %9 : rec_mouse_button_str, align 1
        store %84, %0
        %85 = cast(bitcast) %0 : u8i*
        %86 = load %85 : u8i
        %87 = call @fct(%86) : s8i [all]
        %88 = cast(int_to_bool) %87 : bool
        if %88 {
            call @abort() [all]
            yield
        }
        yield
    }
    %83 = load %8 : s32i
    return %83
}
