tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__bitfld_9.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/bitfld-9.c" (c, x86_64-unknown-linux-gnu)
global button : rec_mouse_button_str = zero [external, default, align 1, dso_local]

fn fct(%arg0: u8i) -> s8i [internal, c, no_inline, dso_local, nothrow] {
    ^bb0(%arg0: u8i):
        %125 = alloca u8i, "coerce", align 1
        store %arg0, %125
        %126 = cast(bitcast) %125 : rec_mouse_button_str*
        %127 = load %126 : rec_mouse_button_str
        %128 = alloca rec_mouse_button_str, "newbutton", align 1
        %129 = alloca s8i, "__retval", align 1
        %130 = alloca s8i, "l", align 1
        %131 = alloca s8i, "r", align 1
        %132 = alloca s8i, "m", align 1
        store %127, %128
        %133 = get_member %128[0] "left" : u8i*
        <unmodeled: cir.get_bitfield>
        %135 = cast(integral) %134 : s8i
        store %135, %130, align 1
        %136 = get_member %128[0] "right" : u8i*
        <unmodeled: cir.get_bitfield>
        %138 = cast(integral) %137 : s8i
        store %138, %131, align 1
        %139 = get_member %128[0] "middle" : u8i*
        <unmodeled: cir.get_bitfield>
        %141 = cast(integral) %140 : s8i
        store %141, %132, align 1
        %142 = load %130 : s8i, align 1
        %143 = cast(integral) %142 : s32i
        %144 = cast(int_to_bool) %143 : bool
        %145 = ternary %144 ? { : bool
            %155 = load %131 : s8i, align 1
            %156 = cast(integral) %155 : s32i
            %157 = cast(int_to_bool) %156 : bool
            yield %157
        } : {
            %154 = const #false : bool
            yield %154
        }
        %146 = ternary %145 ? { : bool
            %151 = load %132 : s8i, align 1
            %152 = cast(integral) %151 : s32i
            %153 = cast(int_to_bool) %152 : bool
            yield %153
        } : {
            %150 = const #false : bool
            yield %150
        }
        %147 = cast(bool_to_int) %146 : s32i
        %148 = cast(integral) %147 : s8i
        store %148, %129
        %149 = load %129 : s8i
        return %149
}
fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca rec_mouse_button_str, "coerce", align 1
    %1 = alloca rec_mouse_button_str, "coerce", align 1
    %2 = alloca rec_mouse_button_str, "coerce", align 1
    %3 = alloca rec_mouse_button_str, "coerce", align 1
    %4 = alloca rec_mouse_button_str, "coerce", align 1
    %5 = alloca rec_mouse_button_str, "coerce", align 1
    %6 = alloca rec_mouse_button_str, "coerce", align 1
    %7 = alloca rec_mouse_button_str, "coerce", align 1
    %8 = alloca s32i, "__retval", align 4
    %9 = alloca rec_mouse_button_str, "newbutton1", align 1
    %10 = const 0 : s32i
    store %10, %8
    %11 = const 1 : u8i
    %12 = get_member %9[0] "left" : u8i*
    <unmodeled: cir.set_bitfield>
    %14 = const 1 : u8i
    %15 = get_member %9[0] "middle" : u8i*
    <unmodeled: cir.set_bitfield>
    %17 = const 1 : u8i
    %18 = get_member %9[0] "right" : u8i*
    <unmodeled: cir.set_bitfield>
    scope {
        %119 = load %9 : rec_mouse_button_str, align 1
        store %119, %7
        %120 = cast(bitcast) %7 : u8i*
        %121 = load %120 : u8i
        %122 = call @fct(%121) : s8i [all]
        %123 = cast(int_to_bool) %122 : bool
        %124 = not %123 : bool
        if %124 {
            call @abort() [all]
            yield
        }
        yield
    }
    %20 = const 0 : u8i
    %21 = get_member %9[0] "left" : u8i*
    <unmodeled: cir.set_bitfield>
    %23 = const 1 : u8i
    %24 = get_member %9[0] "middle" : u8i*
    <unmodeled: cir.set_bitfield>
    %26 = const 1 : u8i
    %27 = get_member %9[0] "right" : u8i*
    <unmodeled: cir.set_bitfield>
    scope {
        %114 = load %9 : rec_mouse_button_str, align 1
        store %114, %6
        %115 = cast(bitcast) %6 : u8i*
        %116 = load %115 : u8i
        %117 = call @fct(%116) : s8i [all]
        %118 = cast(int_to_bool) %117 : bool
        if %118 {
            call @abort() [all]
            yield
        }
        yield
    }
    %29 = const 1 : u8i
    %30 = get_member %9[0] "left" : u8i*
    <unmodeled: cir.set_bitfield>
    %32 = const 0 : u8i
    %33 = get_member %9[0] "middle" : u8i*
    <unmodeled: cir.set_bitfield>
    %35 = const 1 : u8i
    %36 = get_member %9[0] "right" : u8i*
    <unmodeled: cir.set_bitfield>
    scope {
        %109 = load %9 : rec_mouse_button_str, align 1
        store %109, %5
        %110 = cast(bitcast) %5 : u8i*
        %111 = load %110 : u8i
        %112 = call @fct(%111) : s8i [all]
        %113 = cast(int_to_bool) %112 : bool
        if %113 {
            call @abort() [all]
            yield
        }
        yield
    }
    %38 = const 1 : u8i
    %39 = get_member %9[0] "left" : u8i*
    <unmodeled: cir.set_bitfield>
    %41 = const 1 : u8i
    %42 = get_member %9[0] "middle" : u8i*
    <unmodeled: cir.set_bitfield>
    %44 = const 0 : u8i
    %45 = get_member %9[0] "right" : u8i*
    <unmodeled: cir.set_bitfield>
    scope {
        %104 = load %9 : rec_mouse_button_str, align 1
        store %104, %4
        %105 = cast(bitcast) %4 : u8i*
        %106 = load %105 : u8i
        %107 = call @fct(%106) : s8i [all]
        %108 = cast(int_to_bool) %107 : bool
        if %108 {
            call @abort() [all]
            yield
        }
        yield
    }
    %47 = const 1 : u8i
    %48 = get_member %9[0] "left" : u8i*
    <unmodeled: cir.set_bitfield>
    %50 = const 0 : u8i
    %51 = get_member %9[0] "middle" : u8i*
    <unmodeled: cir.set_bitfield>
    %53 = const 0 : u8i
    %54 = get_member %9[0] "right" : u8i*
    <unmodeled: cir.set_bitfield>
    scope {
        %99 = load %9 : rec_mouse_button_str, align 1
        store %99, %3
        %100 = cast(bitcast) %3 : u8i*
        %101 = load %100 : u8i
        %102 = call @fct(%101) : s8i [all]
        %103 = cast(int_to_bool) %102 : bool
        if %103 {
            call @abort() [all]
            yield
        }
        yield
    }
    %56 = const 0 : u8i
    %57 = get_member %9[0] "left" : u8i*
    <unmodeled: cir.set_bitfield>
    %59 = const 1 : u8i
    %60 = get_member %9[0] "middle" : u8i*
    <unmodeled: cir.set_bitfield>
    %62 = const 0 : u8i
    %63 = get_member %9[0] "right" : u8i*
    <unmodeled: cir.set_bitfield>
    scope {
        %94 = load %9 : rec_mouse_button_str, align 1
        store %94, %2
        %95 = cast(bitcast) %2 : u8i*
        %96 = load %95 : u8i
        %97 = call @fct(%96) : s8i [all]
        %98 = cast(int_to_bool) %97 : bool
        if %98 {
            call @abort() [all]
            yield
        }
        yield
    }
    %65 = const 0 : u8i
    %66 = get_member %9[0] "left" : u8i*
    <unmodeled: cir.set_bitfield>
    %68 = const 0 : u8i
    %69 = get_member %9[0] "middle" : u8i*
    <unmodeled: cir.set_bitfield>
    %71 = const 1 : u8i
    %72 = get_member %9[0] "right" : u8i*
    <unmodeled: cir.set_bitfield>
    scope {
        %89 = load %9 : rec_mouse_button_str, align 1
        store %89, %1
        %90 = cast(bitcast) %1 : u8i*
        %91 = load %90 : u8i
        %92 = call @fct(%91) : s8i [all]
        %93 = cast(int_to_bool) %92 : bool
        if %93 {
            call @abort() [all]
            yield
        }
        yield
    }
    %74 = const 0 : u8i
    %75 = get_member %9[0] "left" : u8i*
    <unmodeled: cir.set_bitfield>
    %77 = const 0 : u8i
    %78 = get_member %9[0] "middle" : u8i*
    <unmodeled: cir.set_bitfield>
    %80 = const 0 : u8i
    %81 = get_member %9[0] "right" : u8i*
    <unmodeled: cir.set_bitfield>
    scope {
        %84 = load %9 : rec_mouse_button_str, align 1
        store %84, %0
        %85 = cast(bitcast) %0 : u8i*
        %86 = load %85 : u8i
        %87 = call @fct(%86) : s8i [all]
        %88 = cast(int_to_bool) %87 : bool
        if %88 {
            call @abort() [all]
            yield
        }
        yield
    }
    %83 = load %8 : s32i
    return %83
}
