tests/snapshots/snapshot_fixtures__fixtures_gcc_torture__bitfld_signed1_1.snap
---
source: tests/snapshot_fixtures.rs
expression: snapshot
---
module "/home/takashi/Projects/clang-ir-rs/tests/fixtures.gcc-torture/bitfld-signed1-1.c" (c, x86_64-unknown-linux-gnu)
global b : rec_anon2E0 = {1, zero} [external, default, align 4, dso_local]
global c : s8i = 0 [external, default, align 1, dso_local]

fn abort() -> void [external, c, nothrow];
fn main() -> s32i [external, c, no_inline, dso_local, nothrow] {
    %0 = alloca s32i, "__retval", align 4
    %1 = const 0 : s32i
    store %1, %0
    scope {
        %3 = get_global @b : rec_anon2E0*
        %4 = get_member %3[0] "a" : u8i*
        <unmodeled: cir.get_bitfield>
        %6 = cast(integral) %5 : u64i
        %7 = const 1 : u64i
        %8 = xor %6, %7 : u64i
        %9 = const 3 : u64i
        %10 = cmp lt %8, %9 : bool
        if %10 {
            call @abort() [all]
            yield
        }
        yield
    }
    %2 = load %0 : s32i
    return %2
}
